WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54728
checkSelector*Value functions used in fastCheckSelector fail to inline
https://bugs.webkit.org/show_bug.cgi?id=54728
Summary
checkSelector*Value functions used in fastCheckSelector fail to inline
Antti Koivisto
Reported
2011-02-18 00:24:24 PST
They should be inlined for performance.
Attachments
patch
(4.51 KB, patch)
2011-02-18 00:30 PST
,
Antti Koivisto
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2011-02-18 00:30:26 PST
Created
attachment 82930
[details]
patch
Maciej Stachowiak
Comment 2
2011-02-18 00:55:32 PST
Comment on
attachment 82930
[details]
patch r=me
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug