https://bugs.webkit.org/show_bug.cgi?id=54728 checkSelector*Value functions used in fastCheckSelector fail to inline

Reviewed by Maciej Stachowiak.

Wrap the functions used as template arguments to classes.

* css/CSSStyleSelector.cpp:
(WebCore::fastCheckSingleSelector):
(WebCore::ClassCheck::checkValue):
(WebCore::IdCheck::checkValue):
(WebCore::TagCheck::checkValue):
(WebCore::CSSStyleSelector::SelectorChecker::fastCheckSelector):



Canonical link: https://commits.webkit.org/68929@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78974 268f45cc-cd09-0410-ab3c-d52691b4dbfc