Source/WebCore/css/CSSStyleSelector.cpp
@@ -2081,12 +2081,12 @@ static inline bool isFastCheckableSelector(const CSSSelector* selector)
     return true;
 }
     
-template <typename CheckValueFunction>
-inline bool fastCheckSingleSelector(const CSSSelector*& selector, const Element*& element, const CSSSelector*& topChildOrSubselector, const Element*& topChildOrSubselectorMatchElement, CheckValueFunction checkValue)
+template <class ValueChecker>
+inline bool fastCheckSingleSelector(const CSSSelector*& selector, const Element*& element, const CSSSelector*& topChildOrSubselector, const Element*& topChildOrSubselectorMatchElement)
 {
     AtomicStringImpl* value = selector->value().impl();
     for (; element; element = element->parentElement()) {
-        if (checkValue(element, value) && selectorTagMatches(element, selector)) {
+        if (ValueChecker::checkValue(element, value) && selectorTagMatches(element, selector)) {
             if (selector->relation() == CSSSelector::Descendant)
                 topChildOrSubselector = 0;
             else if (!topChildOrSubselector) {
@@ -2115,21 +2115,25 @@ inline bool fastCheckSingleSelector(const CSSSelector*& selector, const Element*
     }
     return false;
 }
-    
-static inline bool checkSelectorClassValue(const Element* element, AtomicStringImpl* value) 
-{
-    return element->hasClass() && static_cast<const StyledElement*>(element)->classNames().contains(value);
-}
 
-static inline bool checkSelectorIdValue(const Element* element, AtomicStringImpl* value) 
-{
-    return element->hasID() && element->idForStyleResolution().impl() == value;
-}
-
-static inline bool checkSelectorTagValue(const Element*, AtomicStringImpl*)
-{
-    return true;
-}
+struct ClassCheck {
+    static bool checkValue(const Element* element, AtomicStringImpl* value) 
+    {
+        return element->hasClass() && static_cast<const StyledElement*>(element)->classNames().contains(value);
+    }
+};
+struct IdCheck {
+    static bool checkValue(const Element* element, AtomicStringImpl* value) 
+    {
+        return element->hasID() && element->idForStyleResolution().impl() == value;
+    }
+};
+struct TagCheck {
+    static bool checkValue(const Element*, AtomicStringImpl*)
+    {
+        return true;
+    }
+};
 
 bool CSSStyleSelector::SelectorChecker::fastCheckSelector(const CSSSelector* selector, const Element* element)
 {
@@ -2153,15 +2157,15 @@ bool CSSStyleSelector::SelectorChecker::fastCheckSelector(const CSSSelector* sel
     while (selector) {
         switch (selector->m_match) {
         case CSSSelector::Class:
-            if (!fastCheckSingleSelector(selector, element, topChildOrSubselector, topChildOrSubselectorMatchElement, checkSelectorClassValue))
+            if (!fastCheckSingleSelector<ClassCheck>(selector, element, topChildOrSubselector, topChildOrSubselectorMatchElement))
                 return false;
             break;
         case CSSSelector::Id:
-            if (!fastCheckSingleSelector(selector, element, topChildOrSubselector, topChildOrSubselectorMatchElement, checkSelectorIdValue))
+            if (!fastCheckSingleSelector<IdCheck>(selector, element, topChildOrSubselector, topChildOrSubselectorMatchElement))
                 return false;
             break;
         case CSSSelector::None:
-            if (!fastCheckSingleSelector(selector, element, topChildOrSubselector, topChildOrSubselectorMatchElement, checkSelectorTagValue))
+            if (!fastCheckSingleSelector<TagCheck>(selector, element, topChildOrSubselector, topChildOrSubselectorMatchElement))
                 return false;
             break;
         default:
